# python-sdk

./: .commitlintrc.yaml  .flake8  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .release-please-manifest.json  ASYNC_IMPLEMENTATION.md  CHANGELOG.md  Dockerfile  README.md  async-plan-tests.md  async-plan.md  big-plan.md  data.json  liccheck.ini  pyproject.toml  release-please-config.json  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  ci.yml  ci_pr.yaml  docker.yaml  python-pr.yaml  python-publish.yaml  python.yaml  release-please.yml
descope/: __init__.py  _auth_base.py  _authmethod_base.py  _client_base.py  _http_base.py  _http_client_base.py  async_descope_client.py  async_http_client.py  auth.py  auth_async.py  authhelper.py  common.py  descope_client.py  descope_client_async.py  dpop.py  exceptions.py  future_utils.py  http_client.py  http_client_async.py  jwt_common.py  mgmt.py  mgmt_async.py
descope/authmethod/: _enchantedlink_base.py  _magiclink_base.py  _oauth_base.py  _otp_base.py  _password_base.py  _saml_base.py  _sso_base.py  _totp_base.py  _webauthn_base.py  async_totp.py  enchantedlink.py  enchantedlink_async.py  exchanger.py  magiclink.py  magiclink_async.py  oauth.py  oauth_async.py  otp.py  otp_async.py  password.py  password_async.py  saml.py  saml_async.py  sso.py  sso_async.py  totp.py  totp_async.py  webauthn.py  webauthn_async.py
descope/flask/: __init__.py
descope/management/: _access_key_base.py  _audit_base.py  _engine_base.py  _jwt_base.py  _lists_base.py  _outbound_application_base.py  _outbound_scim_base.py  _sso_application_base.py  _sso_settings_base.py  _tenant_base.py  _third_party_application_base.py  _user_base.py  access_key.py  access_key_async.py  analytics.py  analytics_async.py  audit.py  audit_async.py  authz.py  authz_async.py  common.py  descoper.py  descoper_async.py  engine.py  engine_async.py  fga.py  fga_async.py  flow.py  flow_async.py  group.py  group_async.py  jwt.py  jwt_async.py  license.py  license_async.py  lists.py  lists_async.py  management_key.py  management_key_async.py  outbound_application.py  (+25 more)
docs/: deepdive.md  magiclink.md  otp.md
htmlcov/: class_index.html  d_2a85bba178da7a61__enchantedlink_base_py.html  d_2a85bba178da7a61__magiclink_base_py.html  d_2a85bba178da7a61__otp_base_py.html  d_2a85bba178da7a61_enchantedlink_async_py.html  d_2a85bba178da7a61_enchantedlink_py.html  d_2a85bba178da7a61_magiclink_async_py.html  d_2a85bba178da7a61_magiclink_py.html  d_2a85bba178da7a61_otp_async_py.html  d_2a85bba178da7a61_otp_py.html  d_2a85bba178da7a61_password_async_py.html  d_2a85bba178da7a61_password_py.html  d_ed9d64cdfac9d9b5__auth_base_py.html  d_ed9d64cdfac9d9b5__authmethod_base_py.html  d_ed9d64cdfac9d9b5__client_base_py.html  d_ed9d64cdfac9d9b5__http_base_py.html  d_ed9d64cdfac9d9b5_auth_async_py.html  d_ed9d64cdfac9d9b5_auth_py.html  d_ed9d64cdfac9d9b5_common_py.html  d_ed9d64cdfac9d9b5_descope_client_async_py.html  d_ed9d64cdfac9d9b5_descope_client_py.html  d_ed9d64cdfac9d9b5_http_client_py.html  d_ed9d64cdfac9d9b5_jwt_common_py.html  d_f54762f9f1d5aa4d__lists_base_py.html  d_f54762f9f1d5aa4d__outbound_application_base_py.html  d_f54762f9f1d5aa4d__sso_settings_base_py.html  d_f54762f9f1d5aa4d__third_party_application_base_py.html  d_f54762f9f1d5aa4d__user_base_py.html  d_f54762f9f1d5aa4d_audit_async_py.html  d_f54762f9f1d5aa4d_audit_py.html  d_f54762f9f1d5aa4d_common_py.html  d_f54762f9f1d5aa4d_outbound_application_async_py.html  d_f54762f9f1d5aa4d_outbound_application_py.html  d_f54762f9f1d5aa4d_role_async_py.html  d_f54762f9f1d5aa4d_role_py.html  d_f54762f9f1d5aa4d_sso_settings_py.html  d_f54762f9f1d5aa4d_user_async_py.html  d_f54762f9f1d5aa4d_user_py.html  function_index.html  index.html  (+6 more)
samples/: Dockerfile  access_key_sample_app.py  async_demo_app.py  enchantedlink_sample_app.py  flask_authentication.py  magiclink_cross_device_sample_app.py  magiclink_sample_app.py  magiclink_web_sample_app.py  management_outbound_application.py  management_permission_sample_app.py  management_role_sample_app.py  management_sso_sample_app.py  management_tenant_sample_app.py  management_user_sample_app.py  oauth_sample_app.py  oauth_web_sample_app.py  otp_sample_app.py  otp_web_sample_app.py  password_sample_app.py  password_web_sample_app.py  requirements.txt  saml_sample_app.py  sample_app.py  sso_sample_app.py  stepup_sample_app.py  totp_sample_app.py  verbose_mode_example.py  web_sample_app.py  webauthn_sample_app.py  webauthn_web_sample_app.py
samples/decorators/: flask_decorators.py
samples/management/: access_key_sample_app.py  audit_sample_app.py  authz_sample_app.py  files.json  flow_sample_app.py  group_sample_app.py  jwt_mgmt.py  outbound_application_sample_app.py  permission_sample_app.py  role_sample_app.py  sso_application_sample_app.py  sso_sample_app.py  tenant_sample_app.py  user_sample_app.py
samples/templates/: webauthn_demo.html
scripts/gitleaks/: gitleaks.sh  gitleaks.toml
tests/: __init__.py  _unified.py  async_test_base.py  auth_tests.py  common.py  conftest.py  test_async.py  test_async_http_client.py  test_auth.py  test_auth_async.py  test_authhelper.py  test_common.py  test_descope_client.py  test_descope_client_parity.py  test_enchantedlink.py  test_exchanger.py  test_flask.py  test_future_utils.py  test_http_client.py  test_http_client_async.py  test_jwt_common.py  test_magiclink.py  test_oauth.py  test_otp.py  test_password.py  test_saml.py  test_sso.py  test_totp.py  test_totp_parity.py  test_utils.py  test_webauthn.py  testutils.py  utils.py
tests/e2e/: conftest.py  test_access_keys.py  test_magiclink.py  test_otp.py  test_password.py
tests/management/: __init__.py  test_access_key.py  test_analytics.py  test_audit.py  test_authz.py  test_descoper.py  test_engine.py  test_fga.py  test_flow.py  test_group.py  test_jwt.py  test_license.py  test_lists.py  test_mgmtkey.py  test_outbound_application.py  test_outbound_scim.py  test_password.py  test_permission.py  test_project.py  test_role.py  (+6 more)
(+8 files in other folders)
