[tool.poetry]
name = "descope"
version = "0.0.dev3"
description = "Descope Python SDK"
authors = ["Descope <info@descope.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://descope.com/"
repository = "https://github.com/descope/python-sdk"
documentation = "https://docs.descope.com"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "descope" },
]

[tool.poetry.extras]
Flask = ["Flask"]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/descope/python-sdk/issues"


[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = ">=2.27.0"
pyjwt = {version = ">=2.4.0", extras = ["crypto"]}
email-validator = [
    {version = ">=2,<=2.0.0.post2", python = ">=3.7,<3.8"},
    {version = ">=2,<3", python = ">=3.8"}
]
liccheck = "^0.9.1"
Flask = {version = ">=2", python = ">=3.8"}

[tool.poetry.group.dev.dependencies]
mock = "5.1.0"
pre-commit = [
    {version = "<3.0.0", python = ">=3.8,<3.9"},
    {version = "3.6.0", python = ">3.9"}
]
flake8 = {version = "7.0.0", python = ">=3.8.1"}
flake8-pyproject = {version = "1.2.3", python = ">=3.8.1"}
flake8-bugbear = {version = "24.1.17", python = ">=3.8.1"}
liccheck = "0.9.2"
isort = {version = "5.13.2", python = ">=3.8"}
pep8-naming = {version = "0.13.3", python = ">=3.8"}
tox = {version = "4.12.1", python = ">=3.8"}

[tool.poetry.group.format.dependencies]
black = {version = "24.1.1", python = ">=3.8"}

[tool.poetry.group.types.dependencies]
mypy = {version = "1.8.0", python = ">=3.8"}
types-requests = "2.31.0.20240125"
types-setuptools = "68.2.0.2"

[tool.poetry.group.tests.dependencies]
pytest = {version = "8.0.0", python = ">=3.8"}
coverage = {version = "^7.3.1", python = ">=3.8", extras = ["toml"]}

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = ["descope"]
omit = [
    "descope/flask/*",
]


[tool.coverage.report]
fail_under = 98
skip_covered = true
skip_empty = true

[tool.isort]
profile = "black"

[tool.flake8]
per-file-ignores = "__init__.py:F401"
ignore = "E501,N818,W503"
max-line-length = 120
