[tool.poetry]
name = "descope"
version = "1.8.0"
description = "Descope Python SDK"
authors = ["Descope <info@descope.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://descope.com/"
repository = "https://github.com/descope/python-sdk"
documentation = "https://docs.descope.com"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "descope" }]

[tool.poetry.extras]
Flask = ["Flask"]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/descope/python-sdk/issues"


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = ">=2.27.0"
pyjwt = { version = ">=2.4.0", extras = ["crypto"] }
email-validator = [{ version = ">=2,<3", python = ">=3.8" }]
liccheck = "^0.9.1"
Flask = ">=2"

[tool.poetry.group.dev.dependencies]
mock = "5.2.0"
pre-commit = [
    { version = "<3.0.0", python = "<3.9" },
    { version = "3.6.0", python = ">=3.9" },
]
flake8 = "7.1.2"
flake8-pyproject = "1.2.4"
flake8-bugbear = "24.12.12"
liccheck = "0.9.2"
isort = "5.13.2"
pep8-naming = "0.14.1"
tox = "4.25.0"

[tool.poetry.group.format.dependencies]
black = [
    { version = "<24.10.0", python = "<3.9" },
    { version = "24.10.0", python = ">=3.9" },
]

[tool.poetry.group.types.dependencies]
mypy = "1.11.2"
types-requests = "2.32.0.20240914"
types-setuptools = "75.1.0.20240917"

[tool.poetry.group.tests.dependencies]
pytest = "8.3.5"
coverage = { version = "^7.3.1", extras = ["toml"] }

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = ["descope"]
omit = ["descope/flask/*"]


[tool.coverage.report]
fail_under = 98
skip_covered = true
skip_empty = true

[tool.isort]
profile = "black"

[tool.flake8]
per-file-ignores = "__init__.py:F401"
ignore = "E501,N818,W503"
max-line-length = 120
