[metadata]
name = descope-auth
version = 0.0.1
author = Descope
author_email = guyp@descope.com
description = Descope Python SDK package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/descope/python-sdk
project_urls =
    Bug Tracker = https://github.com/descope/python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

install_requires =
    requests
    PyJWT
    cryptography
    email-validator
